--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                     <div class="menu-1">
                         <ul >
                            
-                            <li><a href="/Más Información/index.html">Nosotros</a></li>
+                            <li><a href="Drink-Bar2/Más Información/index.html">Nosotros</a></li>
                         </ul>
                     </div>
                     <img class="logo-2" src="img/logo.png" alt="">
